// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders Layout in default layout without media 1`] = `
<div
  className="container-fluid "
>
  <div
    className="row align-items-center"
  >
    <div
      className="col-12 col-md-12 order-first px-3 my-2"
    />
    <div
      className="col-12 col-md text-center px-4 my-2"
    >
      <h1>
        Title
      </h1>
      <p>
        Layout body.
      </p>
    </div>
  </div>
</div>
`;

exports[`Layout renders a content Layout with the inverted layout 1`] = `
<div
  className="container-fluid "
>
  <div
    className="row align-items-center"
  >
    <div
      className="col-12 col-md-12 order-last px-3 my-2"
    >
      <div
        className=""
      >
        <div
          className="embed-responsive embed-responsive-21by9 rounded"
          style={Object {}}
        >
          <div
            className="fill d-flex justify-content-center align-items-center"
          >
            <div
              className="spinner-border text-primary"
              role="status"
            >
              <span
                className="sr-only"
              >
                Loading...
              </span>
            </div>
          </div>
          <video
            autoPlay={true}
            className="embed-responsive-item"
            loop={true}
            muted={true}
            playsInline={true}
            poster="https://image.url.com"
          >
            <source
              src="https://video.url.com"
              type="video/mp4"
            />
          </video>
        </div>
      </div>
    </div>
    <div
      className="col-12 col-md text-center px-4 my-2"
    >
      <h1
        larger={true}
      >
        Title
      </h1>
      <h4
        larger={true}
      >
        Subtitle
      </h4>
      <p>
        Layout body.
      </p>
    </div>
  </div>
</div>
`;

exports[`Layout renders a content Layout with the left layout 1`] = `
<div
  className="container-fluid "
>
  <div
    className="row align-items-center"
  >
    <div
      className="col-12 col-md-6 order-first order-md-last px-3 my-2"
    >
      <div
        className=""
      >
        <div
          className="embed-responsive embed-responsive-21by9 rounded"
          style={Object {}}
        >
          <div
            className="fill d-flex justify-content-center align-items-center"
          >
            <div
              className="spinner-border text-primary"
              role="status"
            >
              <span
                className="sr-only"
              >
                Loading...
              </span>
            </div>
          </div>
          <video
            autoPlay={true}
            className="embed-responsive-item"
            loop={true}
            muted={true}
            playsInline={true}
            poster="https://image.url.com"
          >
            <source
              src="https://video.url.com"
              type="video/mp4"
            />
          </video>
        </div>
      </div>
    </div>
    <div
      className="col-12 col-md text-left px-4 my-2"
    >
      <h1>
        Title
      </h1>
      <h4>
        Subtitle
      </h4>
      <p>
        Layout body.
      </p>
    </div>
  </div>
</div>
`;

exports[`Layout renders a content Layout with the right layout 1`] = `
<div
  className="container-fluid "
>
  <div
    className="row align-items-center"
  >
    <div
      className="col-12 col-md-6 order-first px-3 my-2"
    >
      <div
        className=""
      >
        <div
          className="embed-responsive embed-responsive-21by9 rounded"
          style={Object {}}
        >
          <div
            className="fill d-flex justify-content-center align-items-center"
          >
            <div
              className="spinner-border text-primary"
              role="status"
            >
              <span
                className="sr-only"
              >
                Loading...
              </span>
            </div>
          </div>
          <video
            autoPlay={true}
            className="embed-responsive-item"
            loop={true}
            muted={true}
            playsInline={true}
            poster="https://image.url.com"
          >
            <source
              src="https://video.url.com"
              type="video/mp4"
            />
          </video>
        </div>
      </div>
    </div>
    <div
      className="col-12 col-md text-left px-4 my-2"
    >
      <h1>
        Title
      </h1>
      <h4>
        Subtitle
      </h4>
      <p>
        Layout body.
      </p>
    </div>
  </div>
</div>
`;

exports[`Layout renders a subtitle in the Layout in the default size 1`] = `
<div
  className="container-fluid "
>
  <div
    className="row align-items-center"
  >
    <div
      className="col-12 col-md-12 order-first px-3 my-2"
    >
      <div
        className=""
      >
        <div
          className="embed-responsive embed-responsive-21by9 rounded"
          style={Object {}}
        >
          <div
            className="fill d-flex justify-content-center align-items-center"
          >
            <div
              className="spinner-border text-primary"
              role="status"
            >
              <span
                className="sr-only"
              >
                Loading...
              </span>
            </div>
          </div>
          <video
            autoPlay={true}
            className="embed-responsive-item"
            loop={true}
            muted={true}
            playsInline={true}
            poster="https://image.url.com"
          >
            <source
              src="https://video.url.com"
              type="video/mp4"
            />
          </video>
        </div>
      </div>
    </div>
    <div
      className="col-12 col-md text-center px-4 my-2"
    >
      <h1>
        Title
      </h1>
      <h4>
        Subtitle
      </h4>
      <p>
        Layout body.
      </p>
    </div>
  </div>
</div>
`;

exports[`Layout renders an image and Layout in default layout 1`] = `
<div
  className="container-fluid "
>
  <div
    className="row align-items-center"
  >
    <div
      className="col-12 col-md-12 order-first px-3 my-2"
    >
      <div
        className=""
      >
        <div
          className="embed-responsive embed-responsive-21by9 rounded"
          style={Object {}}
        >
          <div
            className="fill d-flex justify-content-center align-items-center"
          >
            <div
              className="spinner-border text-primary"
              role="status"
            >
              <span
                className="sr-only"
              >
                Loading...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-12 col-md text-center px-4 my-2"
    >
      <h1>
        Title
      </h1>
      <p>
        Layout body.
      </p>
    </div>
  </div>
</div>
`;
